<resources>
    <string name="app_name" translatable="false">TierYourLikes</string>

    <!--Strings para las pantallas de la app-->
    <string name="menu_settings_text">Ajustes</string>
    <string name="menu_aboutus_text">¿Quiénes Somos?</string>
    <string name="menu_admin_text">Opciones de Administrador</string>
    <string name="menu_profile_text">Perfil</string>
    <string name="menu_home_text">Inicio</string>
    <string name="menu_history_text">Historial</string>
    <string name="menu_browser_text">Buscador</string>
    <string name="register_button_text">Registrarse</string>
    <string name="login_button_text">Login</string>

    <!--Strings para las funciones de la app-->
    <string name="app_login">Login</string>
    <string name="app_logeate">Logeate aquí!</string>
    <string name="app_register">Registrarse</string>
    <string name="app_registrate">Registrate aquí!</string>
    <string name="app_logout">Logout</string>
    <string name="app_list_user_admin">Lista de Usuarios</string>
    <string name="app_delete_user">Eliminar Usuario</string>
    <string name="app_delete_account">Borrar mi cuenta</string>


    <!--Strings para los mensajes a la hora de hacer un login o registro-->
    <string name="app_user_name">Nombre de Usuario</string>
    <string name="app_user_pass">Contraseña</string>
    <string name="app_user_pass2">Repite contraseña</string>
    <string name="app_user_email">E-mail</string>
    <string name="app_user_real_name">Nombre</string>
    <string name="app_user_surname">Apellidos</string>
    <string name="app_already_login"><u>¿Ya estás registrado? Inicia sesión aquí</u></string>
    <string name="app_new_login"><u>¿No tienes una cuenta? Registrate aquí</u></string>
    <string name="app_name_required">Required*</string>


    <!--Strings para los mensajes de error o informacion a la hora de registrarse/ hacer login-->
    <string name="email_not_valid">Correo Electrónico Inválido</string>
    <string name="password_not_equal">Las contraseñas son distintas</string>
    <string name="empty_fields">En el formulario hay algún campo vacío</string>
    <string name="username_exists">El nombre de usuario ya existe</string>
    <string name="account_created">Cuenta creado con éxito</string>
    <string name="sign_in">Se ha iniciado la sesión</string>
    <string name="register_failed">Error al registrarse</string>
    <string name="login_failed">Usuario o contraseña incorrectas</string>


    <!--Strings relativos al perfil-->
    <string name="profile_visited_places">Sitios Visitados</string>
    <string name="profile_comments">Comentarios</string>
    <string name="profile_name">Nombre</string>
    <string name="profile_username">Nombre de Usuario</string>
    <string name="profile_email">Email</string>
    <string name="profile_delete_account_title">Borrar Cuenta</string>
    <string name="profile_delete_account_message">¿Estás seguro de borrar tu cuenta? Todos tus datos se perderán</string>
    <string name="profile_your_profile">Tu perfil</string>
    <string name="profile_templates_count">Plantillas creadas</string>
    <string name="profile_tiers_count">Tiers completados</string>
    <string name="profile_user_icon">Icono del Usuario</string>
    <string name="profile_boton_cambiar_avatar">Cambiar Avatar</string>

    <string name="alert_yes">Sí</string>
    <string name="alert_no">No</string>

    <!--Strings relativos a la lista de perfil-->
    <string name="profile_delete_account_admin">Borrar Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_profile_list">Perfil Usuario</string>


    <!--Strings relativos al side bar right-->
    <string name="sort_ascending_username">Nombre de usuario A - Z</string>
    <string name="sort_descending_username">Nombre de usuario Z - A</string>

    <string name="sort_ascending_name">Nombre real A - Z</string>
    <string name="sort_descending_name">Nombre real Z - A</string>

    <!-- Otro -->
    <string name="image_default_desc">Imagen del Lugar</string>
    <string name="love_icon_default_desc">Imagen de Favorito</string>
    <string name="star_icon_default_desc">Imagen de Valoración</string>
    <string name="place_default_desc">Descripción del Lugar</string>
    <string name="place_default_name">Nombre del Lugar</string>
    <string name="place_details_comment_title">Comentarios</string>
    <string name="place_details_send_rate_button">Enviar Valoración</string>

    <string name="see_more">Ver más</string>
    <string name="see_less">Ver menos</string>

    <string name="lorem_ipsu">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="place_details_rate_title">Valora este lugar</string>
    <string name="write_comment">Escribe una valoración del lugar</string>
    <string name="number">5</string>
    <string name="typeOfPlace">Tipo de lugar</string>
    <string name="typeOfPlaces">Tipo de lugares</string>
    <string name="search">Buscar</string>
    <string name="no_internet">No se pudieron obtener datos, inténtelo más tarde</string>


    <string name="tab_nearest">Cercanos</string>
    <string name="tab_rating">Mejor Valorados</string>
    <string name="tab_twitter">Populares</string>
    <string name="tab_category">Categorías</string>
    <string name="place_address_example">Calle Puerto Lorem de Ipsu Norte</string>
    <string name="delete_comment">Borrar</string>
    <string name="description">Descripción</string>
    <string name="geolocation">Geolocalización</string>
    <string name="menu_creations_text">Creaciones</string>

    <string name="save_tier">Guardar Tier</string>
    <string name="saved_tier_message">El Tier se ha guardado en la Galería</string>
    <string name="error_saved_tier_message">Se produjo un error al guardar la imagen</string>
    <string name="error_upload_tier_message">Error al subir el Tier a la Base de Datos</string>
    <string name="ok_upload_tier_message">El Tier se subió a la BD correctamente</string>

    <string name="template_name">Nombre de la plantilla</string>
    <string name="edit_text_template_name">Nombre de la plantilla</string>
    <string name="cover_photo">Foto de cubierta</string>
    <string name="add_photo">Añadir imagen</string>
    <string name="add_images">Añadir imágenes</string>
    <string name="template_imageView">Imagen de cubierta</string>
    <string name="images_photo">Imágenes para el tier</string>
    <string name="template_row_label">Nombre de las filas</string>
    <string name="s"> S</string>
    <string name="delete">Borrar</string>
    <string name="add_row">Añadir Fila</string>
    <string name="cannot_add_more_rows">No se pueden añadir más de ocho filas</string>
    <string name="added_images">Imagen añadida</string>
    <string name="template_name_category">Nombre de la categoría</string>
    <string name="add_template">Crear Plantilla</string>
    <string name="trial">Fragmento de pruebas</string>
    <string name="most_done">Más usados</string>
    <string name="your_templates">Tus plantillas</string>
    <string name="most_recent">Más recientes</string>

    <string name="icons_title">Elige tu Avatar</string>
    <string name="icons_icon00" translatable="false">Breaking Bad</string>
    <string name="icons_icon01" translatable="false">Super Mario</string>
    <string name="icons_icon02" translatable="false">Spiderman</string>
    <string name="icons_icon03" translatable="false">Fortnite</string>
    <string name="icons_icon04" translatable="false">Iron Man</string>
    <string name="icons_icon05" translatable="false">Avatar</string>
    <string name="icons_icon06" translatable="false">Default Icon</string>
    <string name="icons_icon07" translatable="false">House Stark</string>

    <string name="select_images">Seleccionar Imágenes</string>
    <string name="select_image">Seleccionar Imagen</string>
    <string name="select_category_message">Por favor, selecciona una categoría</string>
    <string name="select_category">Selecciona una Categoría</string>
    <string name="category_select_ok">Confirmar</string>
    <string name="password_not_equal_2">Las contraseñas no coinciden</string>
    <string name="my_tiers">Mis Tiers</string>
    <string name="my_templates">Mis Plantillas</string>
    <string name="choose_color">Elige un color</string>
    <string name="color_select_ok">Confirmar</string>
    <string name="color_select_cancel">Cancelar</string>
    <string name="tiers_completed">Tiers Completados</string>
    <string name="templates_created">Plantillas Creadas</string>

    <string name="label_tier_row_text">Etiqueta</string>

    <string name="delete_tier">Borrar template</string>
    <string name="error_delete_template_message">Error al borrar el template de la Base de Datos</string>
    <string name="success_delete_template">Se ha borrado correctamente el template</string>
    <string name="no_results">Sin Resultados</string>
    <string name="no_logged_upload_tier_msg">No estas logueado, el tier no se guardará en el servidor</string>
    <string name="creations_no_registered_msg">¿No estás registrado? Registrate para poder guardar todos los tiers que realices</string>
    <string name="home">Inicio</string>
    <string name="register">Registro</string>
    <string name="create_template">Crear Plantilla</string>
    <string name="profile">Perfil</string>
    <string name="creations">Creaciones</string>
    <string name="tier">Tier</string>
    <string name="template_created">Se ha creado el template</string>
    <string name="error_getting_saved_tier_message">Error al buscar tier</string>
    <string name="ok_saved_tier_message">Tier guardado cargado con éxito</string>
    <string name="choose_lang">Elige un lenguaje</string>
    <string name="spanish">Español</string>
    <string name="english">Inglés</string>
    <string name="french">Francés</string>


</resources>